test_data/invalid/2.8_grid_mismatch_rotation.ldr
0 Grid mismatch rotation
1 4 0 -24 0 1 0 0 0 1 0 0 0 1 3001.dat
1 15 30 -48 0 0 0 1 0 1 0 -1 0 0 3001.dat